@@ -289,6 +289,7 @@ Contributors (based on gitlog, 543 unique authors):
 * Keryn Knight
 * Kevin Burton
 * Kevin Funk
+* Kevin Möllering
 * Kevin Richardson
 * Kim Thoenen
 * kochin
